--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.13",
     "@nestjs/swagger": "^8.0.7",
     "@nestjs/terminus": "^10.2.3",
@@ -37,6 +39,9 @@
     "handlebars": "^4.7.8",
     "handlebars-layouts": "^3.1.4",
     "hbs": "^4.2.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
