--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "handlebars": "^4.7.8",
     "handlebars-layouts": "^3.1.4",
     "hbs": "^4.2.0",
+    "moment": "^2.30.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
